--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -74,6 +74,12 @@ autobind:
 # modelgen, the others will be allowed when binding to fields. Configure them to
 # your liking
 models:
+  Category:
+    model:
+      - github.com/kameikay/graphql-example/graph/model.Category
+  Course:
+    model:
+      - github.com/kameikay/graphql-example/graph/model.Course
   ID:
     model:
       - github.com/99designs/gqlgen/graphql.ID
